# synther-holographic-pro

./: .env.development  .env.example  .env.template  .gitignore  ADVANCED_STYLING_CONCEPTS.md  API_REFERENCE.md  ARCHITECTURE.md  AUDIO_ENGINE_FIXED.md  CHANGES_SUMMARY.md  CHROMATIC_ABERRATION_CONCEPT.md  CLAUDE-CODE-CONTEXT-BIBLE.md  CLAUDE.md  CURRENT_STATUS_AND_ROADMAP.md  DEPLOYMENT_PROOF.md  ENHANCED_VISUALIZER_IMPLEMENTATION.md  FIREBASE_EXTENSIONS_PLAN.md  FIREBASE_INTEGRATION_PLAN.md  FIREBASE_SETUP.md  FIREBASE_SETUP_GUIDE.md  HEY_JULES_LOOK_LOVE_CLAUDE.md  HOLOGRAPHIC_SYNTHER_STATUS.md  HYPERAV_INTEGRATION_COMPLETE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_ROADMAP.md  INTERACTIVE_FEATURES_COMPLETE.md  LAUNCH_SUCCESS.md  LAUNCH_TEST_RESULTS.md  LAUNCH_TEST_SUMMARY.md  LAYOUT_FIX_STRATEGY.md  MIGRATION_COMPLETE.md  MISSION_ACCOMPLISHED.md  PROFESSIONAL_SYNTHESIZER_ARCHITECTURE.md  PROFESSIONAL_SYNTHESIZER_COMPLETE.md  README.md  REPOSITORY_MIGRATION_PLAN.md  SECURITY_FIX.md  SERVER_RUNNING.md  STATUS_REPORT.md  SYNTHER_VISION_AND_ARCHITECTURE.md  TESTING_REPORT.md  (+9 more)
android/app/src/main/cpp/: CMakeLists.txt  synth_engine_fallback.cpp
documentation/: MIDI_UI_MAPPING_DESIGN.md  MODULAR_UI_TEST_CASES.md  RESTORATION_REPORT.md  UI_VISUAL_REACTIVITY_DESIGN.md
extensions/: firestore-bigquery-export.env  storage-resize-images.env
functions/: package.json
lib/: CLAUDE.md  MORPH_UI_RESTORED.md  firebase_options.dart  holographic_professional_interface.dart  holographic_synthesizer_interface.dart  interactive_draggable_interface.dart  main.dart  main_morph.dart  (+6 more)
(+184 files in other folders)
